[gd_scene load_steps=4 format=2]

[ext_resource path="res://LCL-FULL + Assets/assets/cyril_assets/Hallway/background_hallway.png" type="Texture" id=1]
[ext_resource path="res://locker.gd" type="Script" id=2]
[ext_resource path="res://locker/first_locker.tscn" type="PackedScene" id=3]

[node name="locker" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundHallway" type="Sprite" parent="."]
position = Vector2( 586, 220 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="spawn1" type="Position2D" parent="."]
position = Vector2( -63, 227 )

[node name="spawntimer1" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="first_locker" parent="." instance=ExtResource( 3 )]

[connection signal="timeout" from="spawntimer1" to="." method="_on_spawn_1_timer_timeout"]
